<resources>
    <string name="app_name">برتر ها</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_main">برتر ها</string>

    <string name="nav_add">اضافه کردن گزارش</string>
    <string name="nav_activities">مشاهده فعالیت ها</string>
    <string name="nav_setting">تنظیمات</string>
    <string name="nav_profile">پروفایل</string>
    <string name="nav_aboutus">درباره ما</string>
    <string name="nav_contactus">ارتباط با ما</string>
    <string name="nav_help">راهنما</string>
    <string name="nav_logout">خروج از حساب</string>
    <string name="nav_exit">خروج</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_back">برگشت</string>
    <string name="title_activity_add">اضافه کردن فعالیت</string>
    <string name="title_activity_activites">مشاهده فعالیت ها</string>

    <string name="tasks_main">دسته</string>
    <string name="task_sublevel">زیر دسته</string>
    <string name="task_type">نوع فعالیت</string>
    <string name="group_main_code">مقطع</string>
    <string name="group_code">گروه آزمایشی</string>
    <string name="course_id">نام درس</string>
    <string name="test_date">تاریخ آزمون</string>
    <string name="books">نام کتاب</string>
    <string name="version">نسخه</string>
    <string name="location">محل استفاده</string>
    <string name="channel_id">نام کانال</string>
    <string name="test_type">نوع دفترچه</string>
    <string name="category">حوزه فعالیت</string>
    <string name="crs_subject">مبحث</string>
    <string name="subject">موضوع</string>
    <string name="session_date">تاریخ جلسه</string>
    <string name="session_location">محل جلسه</string>
    <string name="session_manager">مدیر جلسه</string>
    <string name="total_call_count">تعداد کل تماس</string>
    <string name="successful_call_count">تعداد تماس موفق</string>
    <string name="unsuccessful_call_count">تعداد تماس ناموفق</string>
    <string name="owner">سفارش دهنده</string>
    <string name="interviewee">نام مصاحبه شونده</string>
    <string name="learn_course">منبع یادگیری</string>
    <string name="description">توضیحات</string>
    <string name="count">تعداد</string>
    <string name="page_count">تعداد صفحه</string>
    <string name="question_count">تعداد سوال</string>
    <string name="time">زمان (دقیقه)</string>
    <string name="generate_date">تاریخ تولید</string>
    <string name="send_date">تاریخ ارسال</string>
    <string name="manager">مدیر</string>

    <string name="farvardin">فروردین</string>
    <string name="ordibehesht">اردیبهشت</string>
    <string name="khordad">خرداد</string>
    <string name="tir">تیر</string>
    <string name="mordad">مرداد</string>
    <string name="shahrivar">شهریور</string>
    <string name="mehr">مهر</string>
    <string name="aban">آبان</string>
    <string name="azar">آذر</string>
    <string name="day">دی</string>
    <string name="bahman">بهمن</string>
    <string name="esfand">اسفند</string>

    <string name="duration">مدت زمان</string>
    <string name="select_one">انتخاب کنید...</string>
    <string name="select_your_works">فعالیت های خود را انتخاب کنید.</string>
    <string name="connectionError">اتصال به اینترنت برقرار نیست</string>
    <string name="title_activity_login">ورود</string>
    <string name="search_bar">جستجو کنید</string>
    <string name="submit">ارسال</string>
    <string name="enter">وارد کنید</string>
    <string name="doneBtn">بستن</string>
    <string name="shouldNotEmpty">نمیتواند خالی باشد</string>
    <string name="invalid_pass">نام کاربری یا کلمه عبور اشتباه است</string>

    <string name="username">نام کاربری</string>
    <string name="password">کلمه عبور</string>
    <string name="login">ورود</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_profile">پروفایل</string>
    <string name="national_code">کد ملی</string>
    <string name="mobile_number">تلفن همراه</string>
    <string name="university">دانشگاه</string>
    <string name="email">ایمیل</string>
    <string name="title_activity_time_sheet">تایم شیت</string>
    <string name="title_activity_about">درباره ما</string>

    <string name="about_tops_title">اتوماسیون برتر ها</string>
    <string name="about_help">همکار گرامی \n
        شما باید گزارش های خود را به صورت روزانه در سامانه ثبت کنید.\n
    برای ثبت فعالیت ها میتوانید به بخش اضافه کردن گزارش در منوی اصلی بروید.\n
    توجه کنید که امکان ثبت گزارش برای روز های قبل وجود ندارد.\n
    همچنین میتوانید گزارش های قبلی ثبت شده خود را در صفحه اصلی و تایم شیتتان را در بخش تایم شیت در منوی اصلی ببینید.\n</string>

    <string name="about_credits">گروه نرم افزاری کانون فرهنگی آموزش\n\n
    احسان سوری. علی کمالی</string>


</resources>
