<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add_box_black_24dp"
            android:title="@string/nav_add" />

        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_menu_black_24dp"
            android:title="@string/nav_activities" />

        <!--<item-->
            <!--android:id="@+id/nav_setting"-->
            <!--android:icon="@drawable/ic_settings_applications_black_24dp"-->
            <!--android:title="@string/nav_setting" />-->
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_profile"/>
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/logo"
            android:title="@string/nav_aboutus"/>

        <!--<item-->
            <!--android:id="@+id/nav_contactus"-->
            <!--android:icon="@drawable/ic_email_black_24dp"-->
            <!--android:title="@string/nav_contactus"/>-->

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/nav_help" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_profile_24dp"
            android:title="@string/nav_logout" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/nav_exit"/>
    </group>

</menu>
